--- a/Dockerfile.arm32
+++ b/Dockerfile.arm32
@@ -31,7 +31,7 @@ RUN curl -L https://aka.ms/moby-engine-armhf-latest -o moby_engine.deb && dpkg -
     curl -L https://aka.ms/moby-cli-armhf-latest -o moby_cli.deb && dpkg -i ./moby_cli.deb && rm ./moby_cli.deb
 
 RUN curl -L https://aka.ms/libiothsm-std-linux-armhf-latest -o libiothsm-std.deb && dpkg -i ./libiothsm-std.deb && rm ./libiothsm-std.deb && \
-    curl -L https://aka.ms/iotedged-linux-armhf-latest -o iotedge.deb && dpkg -i ./iotedge.deb && rm ./iotedge.deb
+    curl -L https://github.com/Azure/azure-iotedge/releases/download/1.0.0/iotedge_1.0.0-1_armhf.deb -o iotedge.deb && dpkg -i ./iotedge.deb && rm ./iotedge.deb
 
 COPY edge-provision.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/edge-provision.sh
