--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -33,13 +33,13 @@ RUN dpkg --add-architecture armhf && \
     iptables:armhf \
     hostname:armhf 
 
-RUN wget http://ftp.us.debian.org/debian/pool/main/o/openssl1.0/libssl1.0.2_1.0.2l-2+deb9u3_armhf.deb && \
-    dpkg -i libssl1.0.2_1.0.2l-2+deb9u3_armhf.deb
+RUN wget http://ftp.us.debian.org/debian/pool/main/o/openssl1.0/libssl1.0.2_1.0.2r-1~deb9u1_armhf.deb && \
+    dpkg -i libssl1.0.2_1.0.2r-1~deb9u1_armhf.deb
 
 RUN curl -L https://aka.ms/moby-engine-armhf-latest -o moby_engine.deb && dpkg -i ./moby_engine.deb && rm ./moby_engine.deb && \
     curl -L https://aka.ms/moby-cli-armhf-latest -o moby_cli.deb && dpkg -i ./moby_cli.deb && rm ./moby_cli.deb
 
-RUN curl -L https://aka.ms/libiothsm-std-linux-armhf-latest -o libiothsm-std.deb && dpkg -i ./libiothsm-std.deb && rm ./libiothsm-std.deb && \
+RUN curl -L https://github.com/Azure/azure-iotedge/releases/download/1.0.0/libiothsm-std_1.0.0-1_armhf.deb -o libiothsm-std.deb && dpkg -i ./libiothsm-std.deb && rm ./libiothsm-std.deb && \
     curl -L https://github.com/Azure/azure-iotedge/releases/download/1.0.0/iotedge_1.0.0-1_armhf.deb -o iotedge.deb && dpkg -i ./iotedge.deb && rm ./iotedge.deb
 
 COPY edge-provision.sh /usr/local/bin/
