add libcurl3:armhf to resolve missing libcurl.so.4

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -31,7 +31,8 @@ RUN cp /root/bin/az /usr/local/bin && \
 RUN dpkg --add-architecture armhf && \
     apt-get update -qq && apt-get install -qqy --allow-remove-essential \
     iptables:armhf \
-    hostname:armhf 
+    hostname:armhf \
+    libcurl3:armhf 
 
 RUN wget http://ftp.us.debian.org/debian/pool/main/o/openssl1.0/libssl1.0.2_1.0.2r-1~deb9u1_armhf.deb && \
     dpkg -i libssl1.0.2_1.0.2r-1~deb9u1_armhf.deb
