Add support for k8s 1.16
extension/v1beta1 suggested to migrate to apps/v1
See: https://kubernetes.io/blog/2019/07/18/api-deprecations-in-1-16/

--- a/helm/azure-iot-edge-device-container/templates/ingress.yaml
+++ b/helm/azure-iot-edge-device-container/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "azure-iot-edge-device-container.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
-apiVersion: extensions/v1
+apiVersion: apps/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
